Layout about section, add menu shadow, fix menu visibility and add new modificator for link

--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -1,5 +1,6 @@
 .header {
   padding: $header-padding-sticky 0;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 
   &__content {
     display: flex;
