--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -19,6 +19,7 @@
 
   &__header {
     position: sticky;
+    z-index: 1;
     top: 0;
     background-color: $c-light;
 
@@ -61,10 +62,6 @@
 
     &--nav {
       margin-bottom: 44px;
-    }
-
-    &:last-child {
-      margin-bottom: 0;
     }
   }
 }
