--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -31,6 +31,11 @@
   font-weight: 700;
 }
 
+%f-din-pro-bold-37 {
+  @extend %f-din-pro-bold;
+  font-size: 37px;
+}
+
 %f-din-pro-bold-24 {
   @extend %f-din-pro-bold;
   font-size: 24px;
@@ -51,6 +56,7 @@
 %f-helvetica-neue-st-14 {
   @extend %f-helvetica-neue-light;
   font-size: 14px;
+  color: $c-grey;
   line-height: 150%;
 }
 
